--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,9 @@ find_package(ZLIB REQUIRED)
 find_library(HTS_LIBRARY hts)
 find_package(savvy REQUIRED)
 
+add_custom_target(epactsR ALL COMMAND R CMD INSTALL -l ${CMAKE_BINARY_DIR} data/epactsR_3.3.2.tar.gz WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} COMMENT "Builing epactsR ...")
+add_custom_target(mmSKAT ALL COMMAND R CMD INSTALL -l ${CMAKE_BINARY_DIR} data/mmSKAT_0.95.tar.gz WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} COMMENT "Builing mmSKAT ...")
+
 add_library(libtabix src/bedidx.c src/knetfile.c src/index.c)
 set_target_properties(libtabix PROPERTIES PREFIX "")
 target_link_libraries(libtabix ${ZLIB_LIBRARIES} ${HTS_LIBRARY})
@@ -31,4 +34,11 @@ target_link_libraries(bgzip ${ZLIB_LIBRARIES} ${HTS_LIBRARY})
 add_executable(tabix src/tabix.c src/bedidx.c src/knetfile.c src/kstring.c src/index.c)
 target_link_libraries(tabix ${ZLIB_LIBRARIES} ${HTS_LIBRARY})
 
+file(GLOB_RECURSE EPACTS_PERL_SCRIPTS "scripts/ep*")
+file(GLOB_RECURSE EPACTS_R_SCRIPTS "data/*.R")
+
+install(FILES ${EPACTS_PERL_SCRIPTS} DESTINATION bin)
+install(FILES ${EPACTS_R_SCRIPTS} DESTINATION share/EPACTS)
 install(TARGETS pEmmax vcfast chaps anno bgzip tabix RUNTIME DESTINATION bin)
+install(DIRECTORY ${CMAKE_BINARY_DIR}/epactsR DESTINATION lib)
+install(DIRECTORY ${CMAKE_BINARY_DIR}/mmSKAT DESTINATION lib)
