Updates genotype loading and script installation.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,10 +34,12 @@ target_link_libraries(bgzip ${ZLIB_LIBRARIES} ${HTS_LIBRARY})
 add_executable(tabix src/tabix.c src/bedidx.c src/knetfile.c src/kstring.c src/index.c)
 target_link_libraries(tabix ${ZLIB_LIBRARIES} ${HTS_LIBRARY})
 
-file(GLOB_RECURSE EPACTS_PERL_SCRIPTS "scripts/ep*")
+file(GLOB_RECURSE EPACTS_PERL_SCRIPTS "scripts/ep*" "scripts/wGetOptions.pm")
 file(GLOB_RECURSE EPACTS_R_SCRIPTS "data/*.R")
 
-install(FILES ${EPACTS_PERL_SCRIPTS} DESTINATION bin)
+install(FILES ${EPACTS_PERL_SCRIPTS}
+        PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
+        DESTINATION bin)
 install(FILES ${EPACTS_R_SCRIPTS} DESTINATION share/EPACTS)
 install(TARGETS pEmmax vcfast chaps anno bgzip tabix RUNTIME DESTINATION bin)
 install(DIRECTORY ${CMAKE_BINARY_DIR}/epactsR DESTINATION lib)
