Fixes build errors.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,11 +60,12 @@ target_link_libraries(tabix ${ZLIB_LIBRARIES} ${HTS_LIBRARY} ${CMAKE_THREAD_LIBS
 
 file(GLOB_RECURSE EPACTS_PERL_SCRIPTS "scripts/ep*" "scripts/wGetOptions.pm")
 file(GLOB_RECURSE EPACTS_R_SCRIPTS "data/*.R")
+file(GLOB_RECURSE EPACTS_DATA_FILES "data/*")
 
 install(FILES ${EPACTS_PERL_SCRIPTS}
         PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
         DESTINATION bin)
-install(FILES ${EPACTS_R_SCRIPTS} DESTINATION share/EPACTS)
+install(FILES ${EPACTS_DATA_FILES} DESTINATION share/EPACTS)
 install(TARGETS pEmmax vcfast chaps anno bgzip tabix RUNTIME DESTINATION bin)
 install(DIRECTORY ${CMAKE_BINARY_DIR}/epactsR DESTINATION lib) #install(DIRECTORY ${CMAKE_BINARY_DIR}/epactsR DESTINATION lib)
 install(DIRECTORY ${CMAKE_BINARY_DIR}/mmSKAT DESTINATION lib) #install(DIRECTORY ${CMAKE_BINARY_DIR}/mmSKAT DESTINATION lib)
