Fixes deb depenceny string.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.2)
 project(epacts VERSION 1.0.0)
 include(CMakePackageConfigHelpers)
 
-foreach (PROG_TO_CHECK perl gs Rscript R grep mv rm make cat cut dirname head mkdir sort zcat groff pfbtops gnuplot)
+foreach (PROG_TO_CHECK cat cut dirname gnuplot grep groff gs head make mkdir mv perl pfbtops R rm Rscript sort zcat)
     find_program(${PROG_TO_CHECK}_EXE ${PROG_TO_CHECK})
     if(NOT ${PROG_TO_CHECK}_EXE)
         message(FATAL_ERROR "${PROG_TO_CHECK} not found!")
@@ -90,4 +90,5 @@ install(DIRECTORY ${CMAKE_BINARY_DIR}/mmSKAT DESTINATION lib) #install(DIRECTORY
 set(CPACK_PACKAGE_VERSION_MAJOR ${PROJECT_VERSION_MAJOR})
 set(CPACK_PACKAGE_VERSION_MINOR ${PROJECT_VERSION_MINOR})
 set(CPACK_PACKAGE_VERSION_PATCH ${PROJECT_VERSION_PATCH})
+set(CPACK_DEBIAN_PACKAGE_DEPENDS "ghostscript, r-base, groff, gnuplot") 
 include(CPack)
