Fixes some issues on Redhat.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.2)
 project(epacts VERSION 1.0.0)
 include(CMakePackageConfigHelpers)
+include(GNUInstallDirs)
 
 foreach (PROG_TO_CHECK cat cut dirname gnuplot grep groff gs head make mkdir mv perl pfbtops R rm Rscript sort zcat)
     find_program(${PROG_TO_CHECK}_EXE ${PROG_TO_CHECK})
@@ -33,7 +34,7 @@ add_custom_target(epactsR-install
                   ALL
                   DEPENDS epactsR-build
                   #${CMAKE_COMMAND} -E env CPLUS_INCLUDE_PATH=${CMAKE_SOURCE_DIR}/cget/include LIBRARY_PATH=${CMAKE_SOURCE_DIR}/cget/lib R CMD INSTALL -l ${CMAKE_BINARY_DIR} epactsR_3.3.3.tar.gz
-                  COMMAND R CMD INSTALL -l ${CMAKE_BINARY_DIR} --configure-vars='INCLUDE_DIR=${CMAKE_SOURCE_DIR}/cget/include LINK_DIR=${CMAKE_SOURCE_DIR}/cget/lib' epactsR_3.3.3.tar.gz
+                  COMMAND R CMD INSTALL -l ${CMAKE_BINARY_DIR} --configure-vars='INCLUDE_DIR=${CMAKE_SOURCE_DIR}/cget/include LINK_DIR=${CMAKE_SOURCE_DIR}/cget/${CMAKE_INSTALL_LIBDIR} CPPFLAGS="${CMAKE_CXX_FLAGS}"' epactsR_3.3.3.tar.gz
                   WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
                   COMMENT "Installing epactsR ...")
 
@@ -44,7 +45,7 @@ add_custom_target(mmSKAT-build
 add_custom_target(mmSKAT-install
                   ALL
                   DEPENDS mmSKAT-build
-                  COMMAND R CMD INSTALL -l ${CMAKE_BINARY_DIR} mmSKAT_0.95.tar.gz
+                  COMMAND R CMD INSTALL -l ${CMAKE_BINARY_DIR} --configure-vars='CPPFLAGS="${CMAKE_CXX_FLAGS}"' mmSKAT_0.95.tar.gz
                   WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
                   COMMENT "Installing mmSKAT ...")
 
@@ -91,4 +92,5 @@ set(CPACK_PACKAGE_VERSION_MAJOR ${PROJECT_VERSION_MAJOR})
 set(CPACK_PACKAGE_VERSION_MINOR ${PROJECT_VERSION_MINOR})
 set(CPACK_PACKAGE_VERSION_PATCH ${PROJECT_VERSION_PATCH})
 set(CPACK_DEBIAN_PACKAGE_DEPENDS "ghostscript, r-base, groff, gnuplot") 
+set(CPACK_RPM_PACKAGE_REQUIRES "ghostscript, R, groff, gnuplot")
 include(CPack)
