--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,1 @@
-statgen/savvy@5cf549634d535c07f08af4e52de67ecbf960d78e -DCMAKE_C_FLAGS="-fPIC" -DCMAKE_CXX_FLAGS="-fPIC"
+statgen/savvy@5cf549634d535c07f08af4e52de67ecbf960d78e -DCMAKE_C_FLAGS="-fPIC" -DCMAKE_CXX_FLAGS="-fPIC" -DCMAKE_INSTALL_LIBDIR=lib
