Reverts change to r package configuration.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,7 +33,7 @@ add_custom_target(epactsR-install
                   ALL
                   DEPENDS epactsR-build
                   #${CMAKE_COMMAND} -E env CPLUS_INCLUDE_PATH=${CMAKE_SOURCE_DIR}/cget/include LIBRARY_PATH=${CMAKE_SOURCE_DIR}/cget/lib R CMD INSTALL -l ${CMAKE_BINARY_DIR} epactsR_3.3.3.tar.gz
-                  COMMAND R CMD INSTALL -l ${CMAKE_BINARY_DIR} --configure-vars='INCLUDE_DIR=${CGET_PREFIX}/include LINK_DIR=${CGET_PREFIX}/lib CPPFLAGS="${CMAKE_CXX_FLAGS}"' epactsR_3.3.3.tar.gz
+                  COMMAND R CMD INSTALL -l ${CMAKE_BINARY_DIR} --configure-vars='INCLUDE_DIR=${CGET_PREFIX}/include LINK_DIR=${CGET_PREFIX}/lib' epactsR_3.3.3.tar.gz
                   WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
                   COMMENT "Installing epactsR ...")
 
@@ -44,7 +44,7 @@ add_custom_target(mmSKAT-build
 add_custom_target(mmSKAT-install
                   ALL
                   DEPENDS mmSKAT-build
-                  COMMAND R CMD INSTALL -l ${CMAKE_BINARY_DIR} --configure-vars='CPPFLAGS="${CMAKE_CXX_FLAGS}"' mmSKAT_0.95.tar.gz
+                  COMMAND R CMD INSTALL -l ${CMAKE_BINARY_DIR} mmSKAT_0.95.tar.gz
                   WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
                   COMMENT "Installing mmSKAT ...")
 
